# 2025-PY_GOL

./: CMakeLists.txt  LICENSE  README.md
C code/: CMakeLists.txt
